# salvia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DOC.md  README.md
.github/workflows/: audit.yaml  ci.yaml
salvia/: Cargo.toml  LICENSE-MIT  README.md
salvia/examples/: symbolic_derivative.rs  tournament.rs
salvia/src/: lib.rs  macro_support.rs  time.rs  tracing.rs
salvia/src/node/: input.rs  mod.rs  query.rs
salvia/src/runtime/: clock.rs  mod.rs
salvia_macro/: Cargo.toml  README.md
salvia_macro/src/: input.rs  lib.rs  test.rs
salvia_macro/src/query/: mod.rs  parameter.rs  visitors.rs
salvia_macro/tests/input_access_ui/fail/: host_traits_no_hash.rs  host_traits_no_hash.stderr  host_traits_no_stashable.rs  host_traits_no_stashable.stderr
salvia_macro/tests/input_access_ui/pass/: generic_params.rs  struct.rs  where_clause.rs
salvia_macro/tests/query_ui/fail/: arg_duplicate_binding.rs  arg_duplicate_binding.stderr  arg_impl.rs  arg_impl.stderr  arg_ref_a_self.rs  arg_ref_a_self.stderr  arg_ref_self.rs  arg_ref_self.stderr  arg_traits_no_hash.rs  arg_traits_no_hash.stderr  arg_traits_no_stashable.rs  arg_traits_no_stashable.stderr  arg_wildcard.rs  arg_wildcard.stderr  arg_wildcard_context.rs  arg_wildcard_context.stderr  no_inputs.rs  no_inputs.stderr  not_async.rs  not_async.stderr  not_function.rs  not_function.stderr  return_future.rs  return_future.stderr  return_impl.rs  return_impl.stderr  return_transitive_impl.rs  return_transitive_impl.stderr  return_type_traits.rs  return_type_traits.stderr  wrong_context_type.rs  wrong_context_type.stderr
salvia_macro/tests/query_ui/pass/: arg_common.rs  arg_mut_common.rs  arg_mut_ref_static_self_type.rs  arg_mut_self.rs  arg_mut_self_type.rs  arg_none.rs  arg_ref_static_self.rs  arg_ref_static_self_type.rs  arg_self.rs  arg_self_common.rs  arg_self_type.rs  generic_params.rs  recursion.rs  return_common.rs  struct_impl.rs  struct_impl_with_generic_params.rs  where_clause.rs
