[package]
name = "salvia"
version = "0.1.0"
edition = "2018"

description = "Incremental computing brought to async Rust"
authors = ["haibane_tenshi <obscure.sanctum@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental"]
categories = ["asynchronous", "caching"]

[features]
nightly = []

[package.metadata.docs.rs]
features = ["async-trait", "nightly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvia_macro = { path = '../salvia_macro' }

anymap2 = "0.13.0"
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["rt", "sync", "macros"] }
parking_lot = "0.11.1"
bitvec = "0.22.3"
async-trait = { version = "0.1.50", optional = true }
tracing = { version = "0.1.29", optional = true }

[dev-dependencies]
# Need this available for doc-tests.
# Macro expansion relies on `salvia` name to be available in global scope, so we need to alias ourselves here.
# Not sure if there is a better way.
salvia = { path = '.' }

tokio = { version = "1.4.0", features = ["rt-multi-thread", "sync", "macros"] }
async-trait = "0.1.50"
async-recursion = "0.3.2"
nom = "7.1.0"
